--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ Flask-Login==0.6.2
 Flask-WTF==0.15.1
 Werkzeug==2.3.7
 python-dotenv==1.0.0
-SQLAlchemy==2.0.21 
+SQLAlchemy==2.0.21
+gunicorn==21.2.0 
