--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,14 @@
     "env": {
         "PYTHONPATH": ".",
         "FLASK_ENV": "production",
-        "FLASK_APP": "app.py"
+        "FLASK_APP": "app.py",
+        "FLASK_DEBUG": "0",
+        "PYTHONUNBUFFERED": "1"
+    },
+    "functions": {
+        "app.py": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
     }
 } 
