--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
-Flask-Login==0.6.2
-Werkzeug==2.3.7
-SQLAlchemy==2.0.21
-python-dotenv==1.0.0
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-Login==0.5.0
+Werkzeug==2.0.1
+pymongo==4.6.1
+python-dotenv==0.19.0
+Flask-PyMongo==2.3.0
+dnspython==2.4.2
 gunicorn==21.2.0 
