--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,21 @@
     "version": 2,
     "builds": [
         {
+            "src": "api/health.py",
+            "use": "@vercel/python"
+        },
+        {
             "src": "api/index.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
-            "src": "/test_db",
-            "dest": "/api/index.py"
+            "src": "/health",
+            "dest": "/api/health.py"
         },
         {
-            "src": "/health",
+            "src": "/test_db",
             "dest": "/api/index.py"
         },
         {
@@ -30,6 +34,10 @@
         "SECRET_KEY": "bgmi-key-store-secret-key-2024"
     },
     "functions": {
+        "api/health.py": {
+            "memory": 1024,
+            "maxDuration": 10
+        },
         "api/index.py": {
             "memory": 2048,
             "maxDuration": 60
